# raygpu

./: CMakeLists.txt  README.md  build-shared.bat
examples/: CMakeLists.txt  core_cursor.c  core_screenrecord.cpp  core_window.c  cursorstuff.c  models_lights.cpp  pipeline_settings.c  rlfunctions.c  textures_mipmap.cpp
include/: config.h  macros_and_constants.h  raygpu.h
src/: InitWindow.c  backend_wgpu.c  dawn_stuff.cpp  glsl_support.cpp  raygpu.c  rtext.c  shader_parse.cpp
src/internal_include/: internals.h  renderstate.h
src/platform/: InitWindow_GLFW.c  InitWindow_RGFW.c  InitWindow_SDL2.cpp  InitWindow_SDL3.c  sdl3webgpu.h
